ingress-controller/traefik/traefik-admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8580
