ingress-controller/traefik/traefik-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    name: traefik-ingress-lb
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 31742
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8580
