ingress-controller/traefik/traefik-admin-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.amit-eks-demo.amit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-admin-ui
          servicePort: 80
